# gsty

./: .gitignore  Cargo.toml  README.md  release.sh
.github/workflows/: ci.yml
scripts/: release.sh
src/: main.rs  theme.rs
